# golly

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  golly  golly.py  notes.md
.devcontainer/: devcontainer.json  install-dev-tools.sh
barrier-repair/: CMakeLists.txt  test.c
barrier-repair/include/: SourceLocation.h  StmtCollector.h
barrier-repair/src/: RewritePrinter.cpp  SourceLocation.cpp  StmtCollector.cpp  main.cpp
benchmark/: create-benchmark.py
include/golly/: DimensionDetection.h  PscopDetection.h  golly.h
include/golly/ADT/: PairSet.h
include/golly/Analysis/: ConditionalDominanceAnalysis.h  CudaParameterDetection.h  DimensionDetection.h  Error.h  PolyhedralBuilder.h  Pscop.h  PscopBuilder.h  PscopDetection.h  PscopDetector.h  RaceDetection.h  SccOrdering.h  StatementDetection.h  Statements.h  SyncBlockDetection.h
include/golly/ErrorHandling/: Error.h  YamlDumper.h
include/golly/Support/: ConditionalAtomizer.h  ConditionalVisitor.h  GollyOptions.h  SCEVValidator.h  ScopHelper.h  Traversal.h  bfs.h  isl.h  isl_llvm.h  type_list.h
lib/: CMakeLists.txt  DimensionDetection.cpp  PscopDetection.cpp  golly.cpp
lib/Analysis/: ConditionalDominanceAnalysis.cpp  CudaParameterDetection.cpp  DimensionDetection.cpp  PolyhedralBuilder.cpp  PolyhedralBuilderSupport.h  Pscop.cpp  PscopBuilder.cpp  PscopDetection.cpp  PscopDetector.cpp  RaceDetection.cpp  SccOrdering.cpp  StatementDetection.cpp  Statements.cpp  SyncBlockDetection.cpp
lib/ErrorHandling/: Error.cpp  YamlDumper.cpp
lib/Support/: ConditionalAtomizer.cpp  GollyOptions.cpp  SCEVValidator.cpp  isl.cpp  isl_llvm.cpp
tests/: .gitignore  GkleeTests.yaml  atomic.cu  barrier_divergence.cu  barriers.cu  branch.cu  clean.sh  coop_groups.cu  fn_inline.canon.ll  fn_inline.cu  gen-ll.sh  gklee.py  gpuverify.py  loop.cu  memcpy.cu  polybenchGpu.yaml  sandbox.cu  simple.cu  trivial_race.cu  warp.cu  warp_failure.cu  yolo.c  yolo.cu
tests/barrier_divergence/: block_bd.ll  warp_bd.cu
tests/basic/: ballot.cu  barrier_divergence.cu  coop_groups.cu  loop.cu  warp_race.cu
tests/basic/control_flow/: assert.cu
tests/basic/data_race/: parreduce.cu  trivial_race.cu  warp_no_race.cu
tests/basic/shared_memory/: shmem.cu
tests/control_flow/: branch.cu  branches.canon.ll  branches.cu  branches.ll  loop.cu
tests/data_race/: block_race.cu  parreduce_norace.cu  parreduce_race.cu  trivial_race.cu  warp_race.cu
tests/dockers/: .gitignore  build.sh  gklee.Dockerfile  gklee.patch  gpuverify.Dockerfile
tests/shared_memory/: shmem.canon.ll  shmem.ll  shmem_race.cu
tools/: CMakeLists.txt
tools/kernel_extractor/: CMakeLists.txt
tools/kernel_extractor/include/: MatchPrinter.h  RewritePrinter.h
tools/kernel_extractor/src/: MatchPrinter.cpp  RewritePrinter.cpp  main.cpp
